[package]
name = "drelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full", "time"] }
ethers = "0.13.0"
solana-program = "1.18.11"
solana-client = "1.18.11"
solana-sdk = "1.18.11"
redis = "0.25.0"
